--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "truffle test ./test/flightSurety.js",
     "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
     "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
+    "server": "webpack --config webpack.config.server.js"
   },
   "author": "Stefannel",
   "devDependencies": {
