--- a/package.json
+++ b/package.json
@@ -8,41 +8,19 @@
   "repository": "",
   "license": "MIT",
   "scripts": {
-    "test": "truffle test ./test/flightSurety.js",
-    "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
-    "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "webpack --config webpack.config.server.js"
+    "test": "truffle.cmd test",
+    "dapp": "lite-server"
   },
   "author": "Stefannel",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "bignumber.js": "8.0.2",
     "chai": "^4.2.0",
-    "css-loader": "^1.0.0",
-    "express": "4.16.4",
-    "file-loader": "3.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "openzeppelin-solidity": "^2.2.0",
-    "start-server-webpack-plugin": "2.2.5",
-    "style-loader": "^0.23.1",
-    "superstatic": "6.0.3",
     "truffle-assertions": "^0.8.2",
     "truffle-hdwallet-provider": "^1.0.6",
-    "web3": "^1.0.0-beta.52",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-node-externals": "1.7.2"
+    "web3": "^1.0.0-beta.54"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "4.16.4",
+    "openzeppelin-solidity": "^2.2.0",
+    "lite-server": "^2.4.0"
+  }
 }
