Completing the readme.md and final adjustments to the project
Completing the readme.md and final adjustments to the project

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "scripts": {
     "test": "truffle.cmd test",
+    "server": "node ./src/server/index.js",
     "dapp": "lite-server"
   },
   "author": "Stefannel",
@@ -16,7 +17,7 @@
     "chai": "^4.2.0",
     "truffle-assertions": "^0.8.2",
     "truffle-hdwallet-provider": "^1.0.6",
-    "web3": "^1.0.0-beta.54"
+    "web3": "^1.0.0-beta.52"
   },
   "dependencies": {
     "express": "4.16.4",
